--- a/pixel-chess/package.json
+++ b/pixel-chess/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "prompt-sync": "^4.2.0",
     "ws": "^7.4.2"
   }
 }
